# discontinuitypy

./: .envrc  .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  00_ids_finder.html  01_ids_detection.html  01_pipelines.html  02_ids_properties.html  03_mag_plasma.html  10_datasets.html  11_ids_config.html  12_mission_config.html  20_candidates.html  20_datasets.html  21_datasets_kedro.html  21_event.html  CITATION.cff  README.md  about.html  catelog.yaml  environment.yml  index.html  justfile  notes.md  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  utils.html
.github/workflows/: deploy.yaml  test.yaml
analysis/: 00_base.html  01_occurence_rate.html  02_orientation.html  02_properties.html  03_map.html  10_classification.html  11_ts.html  20_model.html  index.html  jno_model_comparison.html  or.html  properties.html
conf/base/: catalog.yml  catalog_juno.yml  catalog_stereo.yml  catalog_themis.yml  logging.yml  parameters.yml  parameters_data_processing.yml  parameters_exps.yml  parameters_juno.yml  parameters_juno_all.yml  parameters_model.yml  parameters_omni.yml  parameters_pds.yml  parameters_stearo.yml  parameters_themis.yml  parameters_themiss.yml  parameters_wind.yml
detection/: 01_variance.html  02_TS_criterion.html
discontinuitypy/: __init__.py  _modidx.py  config.py  datasets.py  datasets_kedro.py  integration.py  missions.py  naming.py
discontinuitypy/core/: detection.py  event.py  pipeline.py  propeties.py
discontinuitypy/detection/: variance.py
discontinuitypy/mission/: __init__.py  solo.py  stereo.py  themis.py  wind.py
discontinuitypy/plot/: __init__.py  alfvenicity.py
discontinuitypy/propeties/: duration.py  mva.py
discontinuitypy/utils/: basic.py  dataset.py  naming.py  ops.py  plot.py  polars.py
files/: discontinuitypy.bib  quarto.just
ids_finder/: __init__.py  _modidx.py  candidates.py  core.py  datasets.py
ids_finder/core/: detection.py  pipeline.py  propeties.py
ids_finder/pipelines/: default.py
ids_finder/utils/: analysis.py  basic.py  cdf.py  kedro.py  lbl.py  pds.py  plot.py  polars.py  r.py
manuscripts/: AGU23_poster.html  paper.html
missions/: artemis.html  index.html  juno.html  messenger.html  solo.html  stereo.html  themis.html  venus.html  wind.html
missions/juno/: index.html  mag.html  state.html
missions/omni/: index.html
missions/stereo/: index.html  mag.html  state.html
missions/themis/: index.html  mag.html  state.html
missions/wind/: index.html  mag.html  state.html
notebooks/: .index.ipynb  00_base.ipynb  00_candidates.ipynb  00_ids_finder.ipynb  01_ids_detection.ipynb  01_juno.ipynb  01_model.ipynb  01_pipelines.ipynb  02_candidates.ipynb  02_ids_properties.ipynb  02_themis.ipynb  03_mag_plasma.ipynb  03_stereo.ipynb  100_utils.ipynb  10_datasets.ipynb  10_juno.ipynb  10_juno_report.ipynb  10_reporting.ipynb  11_ids_config.ipynb  11_stereo.ipynb  12_mission_config.ipynb  12_themis.ipynb  13_model.ipynb  20_candidates.ipynb  20_datasets.ipynb  21_event.ipynb  99_pipelines.ipynb  99_utils.ipynb  _21_datasets_kedro.ipynb  __init__.ipynb  _quarto.yml  _test.ipynb  _test.qmd  about.qmd  index.ipynb  index.qmd  nbdev.yml  pipelines.yaml  references.bib  sidebar.yml  (+1 more)
notebooks/analysis/: 00_base.ipynb  01_classification.ipynb  01_occurence_rate.ipynb  02_orientation.ipynb  02_properties.ipynb  03_map.ipynb  10_classification.ipynb  11_ts.ipynb  20_model.ipynb  _00_overview.ipynb  _00_test.ipynb  _10_reporting.ipynb  _test.ipynb  (+2 more)
pipelines/: 100_project.html  10_mission.html  1_data.html  2_data_mag.html  3_data_state.html  index.html
plot/: alfvenicity.html  index.html
properties/: 00_duration.html  00_mva.html  duration.html
tutorials/: tutorial.html
utils/: 00_basic.html  00_dataset.html  01_plotting.html  02_analysis_utils.html  02_ops.html  10_polars.html  15_kedro.html  20_pds.html  30_cdf.html  31_lbl.html  basic.html  naming.html
(+142 files in other folders)
