[project]
name = "discontinuitypy"
dynamic = ["version"]
description = "A python package for identifying and analyzing discontinuities for time series data."
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    # "space-analysis.py[io]",
    "beforerr",
    "plasmapy",
    "xarray[accel]",
    "xarray_einstats",
    "polars",
    "pyarrow",
    "modin[ray]",
    "pydantic",
    "fastcore",
    "pdpipe",
    "tqdm",
    "loguru",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
Homepage = "https://beforerr.github.io/discontinuitypy"
Repository = "https://github.com/Beforerr/discontinuitypy"

[tool.pdm.version]
source = "file"
path = "discontinuitypy/__init__.py"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = "<3.12"
ipykernel = "*"
scipy = "*"
matplotlib = "*"
netcdf4 = "*"
pytables = "*"   # for `pyspedas`

[tool.pixi.pypi-dependencies]
discontinuitypy = { path = ".", editable = true }
space_analysis = { path = "../../src/space-analysis.py", editable = true, extras = ["io"] }
nbdev = "*"
setuptools = "*"
pyspedas = "*"

[tool.pixi.tasks]
