[project]
name = "discontinuitypy"
dynamic = ["version"]
description = "A python package for identifying and analyzing discontinuities for time series data."
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "space-analysis[io]",
    "beforerr",
    "xarray",
    "xarray_einstats",
    "polars",
    "pyarrow",
    "pydantic",
    "fastcore",
    "pdpipe",
    "tqdm",
    "loguru",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
accel = ["xarray[accel]", "modin[ray]"]
plot = ["matplotlib", "pyspedas", "hvplot>=0.10.0", "holoviews"]

[project.urls]
Homepage = "https://beforerr.github.io/discontinuitypy"
Repository = "https://github.com/Beforerr/discontinuitypy"

[tool.pdm.version]
source = "scm"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.environments]
default = ["plot", "accel"]

[tool.pixi.dependencies]
ipykernel = "*"
scipy = "*"
numba = "*"
netcdf4 = "*"   # for `pytables`

[tool.pixi.pypi-dependencies]
discontinuitypy = { path = ".", editable = true }
nbdev = "*"